# ferricstore

./: .dockerignore  .formatter.exs  .gitignore  .mcp.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  RELEASING.md  SECURITY.md  mix.exs  your-testing-framework-is-shaping-how-engineers-think.md
.github/: PULL_REQUEST_TEMPLATE.md
apps/ferricstore_server/native/native_protocol_nif/: Cargo.toml
apps/ferricstore_server/native/native_protocol_nif/benches/: fql_allocations.rs  fql_parser.rs
apps/ferricstore_server/native/native_protocol_nif/benches/support/: fql_workloads.rs
apps/ferricstore_server/native/native_protocol_nif/src/: fql.rs  lib.rs
bench/: README.md  cluster_throughput.exs  commands_bench.exs  durability_check.exs  erpc_4cell.exs  erpc_pipeline_throughput.exs  erpc_quorum_strategies.exs  erpc_throughput.exs  erpc_vs_tcp.exs  flow_100k_state_bench.exs  flow_api_bench.exs  flow_commands_baseline_bench.exs  flow_governance_bench.exs  flow_kv_record_bench.exs  flow_lineage_bench.exs  flow_lmdb_soak.exs  flow_native_batch_bench.exs  flow_pipeline_write_bench.exs  flow_python_backend_profile.exs  flow_query_index_bench.exs  flow_query_lmdb_bench.exs  flow_query_native_index_bench.exs  flow_query_shape_soak.exs  flow_query_soak.exs  flow_resp_pipeline_bench.exs  flow_state_lmdb_soak.exs  flow_tail_probe.exs  flow_workflow_bench.exs  fql_parser_bench.exs  fql_scheduler_bench.exs  local_regression_baseline.py  nodelay_bench.sh  pubsub_bench.exs  query_performance_compare.exs  query_performance_criterion_export.exs  (+24 more)
(+2375 files in other folders)
