[package]
name = "native_protocol_nif"
version = "0.1.0"
edition = "2021"

[lib]
name = "native_protocol_nif"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.37", default-features = false }

[features]
default = ["nif_version_2_16"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
